Fixes spacing in librarian cards

--- a/scss/emory-libraries/patterns/30-molecules/card-librarian/_structure.scss
+++ b/scss/emory-libraries/patterns/30-molecules/card-librarian/_structure.scss
@@ -43,7 +43,7 @@
                          "title"
                          "library";
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr min-content auto min-content;
+    grid-template-rows: repeat(4, min-content);
   }
   
   // Builds the card subjects structure.
